# ruke

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bench.sh  crates-io.md  install.ps1  install.sh
.github/: install.sh
.github/workflows/: release.yml  rust.yml
crates/ruke_cli/: Cargo.toml
crates/ruke_cli/src/: args.rs  flags.rs  main.rs
crates/ruke_core/: Cargo.toml
crates/ruke_core/src/: lib.rs
src/: cli.rs  main.rs  rukefile.rs  tasks.rs
src/cli/: add.rs  init.rs  list.rs  mod.rs  new.rs  remove.rs  subcommands.rs
src/tasks/: mod.rs  path.rs  runner.rs
