[package]
name = "ruke"
version = "0.1.3"
edition = "2021"
description = "A dead-simple automation tool. Inspired by Makefile and Justfile."
authors = ["Kauê Fraga Rodrigues"]
license = "MIT"
repository = "https://github.com/kauefraga/ruke"

[dependencies]
clap = "4.5.4"
colorized = "1.0.0"
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"
