[package]
name = "ruke"
version = "0.1.7"
edition = "2021"
description = "A dead-simple automation tool. Inspired by Makefile and Justfile."
authors = ["Kauê Fraga Rodrigues <rkauefraga+ruke@gmail.com>"]
license = "MIT"
repository = "https://github.com/kauefraga/ruke"
homepage = "https://github.com/kauefraga/ruke?tab=readme-ov-file#ruke"

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
colorized = "1.0.0"
inquire = "0.7.5"
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"
